# QuasarML

./: .gitignore  .gitmodules  BOTTLENECK_ANALYSIS.md  CMakeLists.txt  PERFORMANCE_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS.md  README.md
QuasarML/: CMakeLists.txt
QuasarML/include/: QuasarML.h
QuasarML/src/: defines.h  qspch.h
QuasarML/src/Backend/: BackendInterface.h  DeviceCapabilities.cpp  DeviceCapabilities.h
QuasarML/src/Backend/Vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanDevice.cpp  VulkanTypes.h
QuasarML/src/Common/: Assert.h  Logger.cpp  Logger.h  Types.cpp  Types.h
QuasarML/src/Container/: DeletionQueue.h
QuasarML/src/Core/: Accelerator.cpp  Accelerator.h  AcceleratorManager.cpp  AcceleratorManager.h  DataType.h  DataTypes.cpp  DataTypes.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  Engine.cpp  Engine.h  Kernel.cpp  Kernel.h  Logger.cpp  Logger.h  MemoryPool.cpp  MemoryPool.h  Tensor.cpp  Tensor.h  TensorOperations.cpp  TensorOperations.h  TensorOps.h
QuasarML/src/Ops/: DeviceTuning.h  Elementwise.cpp  Elementwise.h  LinAlg.cpp  LinAlg.h  Manipulation.cpp  Manipulation.h  Reduction.cpp  Reduction.h  ShaderGen.cpp  ShaderGen.h
QuasarML/src/VulkanAccelerator/: VulkanAccelerator.cpp  VulkanAccelerator.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitInfo.cpp  VulkanInitInfo.h  VulkanTypes.h
QuasarML/src/VulkanBackend/: VulkanBackend.cpp  VulkanBackend.h  VulkanDevice.h  VulkanTypes.h
examples/nano-gpt/: CMakeLists.txt  README.md  nano_gpt.cpp
unit-tests/: CMakeLists.txt
unit-tests/src/: _bench_compute_bound.cpp  _bench_memory_pool.cpp  _bench_qsml_performance.cpp  _bench_qsml_performance.cpp.bak  _test_comprehensive.cpp  _test_memory_pool.cpp  _test_minimal.cpp  _test_pool_quick.cpp  _test_qsml_benchmark.cpp  _test_qsml_cnn.cpp  _test_qsml_functionality.cpp  _test_threading.cpp  unit-tests.cpp
